--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: light;
+}
+
+.dark:root {
+  color-scheme: dark;
+}
+
 html {
   font-family: 'Noto Sans', sans-serif;
 }
